--- a/01_textView/app/src/main/res/layout/activity_main.xml
+++ b/01_textView/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/hello_world"
+        android:textColor="#fff000"
+        android:textSize="18pt"
+        android:textStyle="italic" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/welcome"
+        android:textColor="#ff00ff"
+        android:background="#3355bb"
+        android:textSize="18sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/android"
+        android:textColor="#707070"
+        android:typeface="serif" />
+
 </LinearLayout>
