--- a/02_imageView/app/src/main/res/layout/activity_main.xml
+++ b/02_imageView/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity" >
 
-    <TextView
+    <!-- src 속성만 정의해서 이미지의 원래 크기와 모양으로 출력 -->
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/earth" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- 최대 크기 100*80으로 정의해서 정의한 크기에 맞게 화면에 축소되어 출력 -->
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/earth"
+        android:maxHeight="100px"
+        android:maxWidth="80px"
+        android:adjustViewBounds="true" />
+
+    <!-- 원본 이미지에 색상 #70ff00ff을 옅게 얹힌 효과 -->
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/banana"
+        tools:ignore="UseAppTint"
+        android:tint="#70ff00ff" />
+
+</LinearLayout>
