--- a/02_imageView/app/src/main/res/layout/basic.xml
+++ b/02_imageView/app/src/main/res/layout/basic.xml
@@ -1,7 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <!--
+        src 속성
+        - 출력할 이미지를 지정
+        - ##rrggbb처럼 색상 값을 정의할 수 있고 외부 이미지를 지정할 수 있음
+        - 값을 대입하지 않으면 아무 것도 보이지 않음
+        - src 속성을 통한 이미지 출력은 일반적으로 리소스 폴더에 이미지를 복사해놓고
+          @drawable/ID 형식으로 이미지의 ID를 지정하여 해당 ID를 사용해서
+          ImageView의 표면에 그림을 출력
+          (파일 이름에 따라 자동적으로 ID가 생성되므로 같은 이름의 이미지를 넣을 수 없음)
+    -->
+
+    <!--
+        이미지 포맷
+        - 안드로이드는 해상도가 다른 다양한 장치를 위해 운영체제 차원에서 다양한 해상도로
+          준비된 이미지를 운영체제에 따라 알아서 출력할 수 있도록 지원함
+        - ldpi : 120 정도의 낮은 해상도
+        - mdpi : 160 정도의 중해상도
+        - hdpi : 240 정도의 초고해상도
+        - xhdpi : 320 정도의 초고해상도
+        - xxhdpi : 480 정도의 더 높은 해상도
+    -->
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/banana"
+        tools:ignore="UseAppTint"
+        android:tint="#70ff00ff" />
 
 </LinearLayout>
