--- a/07_absoluteLayout/app/src/main/res/layout/activity_main.xml
+++ b/07_absoluteLayout/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<!--
+    AbsoulteLayout
+    - 관계나 순서에 상관없이 지정한 절대 좌표에 차일드 Veiew를 배치함
+    - 차일드 View의 좌표를 layout_x, layout_y 속성으로 지정해놓으면
+      부모의 좌상단을 기준으로 한 좌표에 View 배치
+    - 참고) 다양한 기기가 나오면서 이 레이아웃은 deprecated 되었음
+-->
+<AbsoluteLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_x="50dip"
+        android:layout_y="350dip"
+        android:text="Absolute(50,350)"
+        android:textSize="20sp"
+        android:background="#B2CCFF" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="130dip"
+        android:layout_y="90dip"
+        android:text="Layout(130,90)"
+        android:textSize="20sp"
+        android:background="#F2CB61" />
+
+</AbsoluteLayout>
